# agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json
characters/: character.example.json
dashboard/: bun.lockb  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  not-found.tsx
dashboard/app/character/: page.tsx
dashboard/app/chat/: layout.tsx  page.tsx
dashboard/app/settings/: layout.tsx
dashboard/components/: Breadcrumb.tsx  CharacterSwitcher.tsx  ChatBox.tsx  ChatMessages.tsx  NavMain.tsx  Sidebar.tsx
dashboard/components/ui/: progress-spinner.tsx
dashboard/providers/: CharacterProvider.tsx  ChatProvider.tsx  SettingsProvider.tsx
src/: main.rs
src/clients/: mod.rs
src/clients/api/: client.rs  config.rs  mod.rs  routes.rs
src/clients/cli/: client.rs  mod.rs
src/clients/dashboard/: api.rs  character.rs  chat.rs  client.rs  mod.rs
src/clients/discord/: client.rs  config.rs  handler.rs  mod.rs
src/clients/storytelling/: client.rs  config.rs  gen.rs  gen_voice.rs  mod.rs  routes.rs  tts.rs
src/clients/telegram/: client.rs  handler.rs
src/clients/truth/: client.rs  config.rs  mod.rs  post.rs  reply.rs  search.rs
src/clients/twitter/: client.rs  config.rs  mod.rs  post.rs  reply.rs  search.rs  twitter.rs
src/core/: agent.rs  character.rs  config.rs  consts.rs  memory.rs  mod.rs
src/dbs/: enums.rs  local.rs  mod.rs  mongodb.rs
src/providers/: mod.rs
src/providers/completion/: deepseek.rs  enums.rs  mod.rs
src/providers/elevenlabs/: client.rs  mod.rs  tts.rs  ttv.rs  types.rs
(+25 files in other folders)
