[package]
name = "fabelis-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
colored = "2.2.0"
dotenv = "0.15.0"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rig-core = { version = "0.6.0", features = ["derive"] }
rig-mongodb = "0.2.1"
fastembed = "4.3.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
mongodb = "3.1.1"
futures = "0.3.31"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
actix-web = "4.9.0"
twitter-v2 = "0.1.8"
